<resources>
    <string name="app_name">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loading">Loading…</string>
    <string name="press_to_edit">Press to edit</string>
    <string name="map">Map</string>
    <string name="my_finds">My finds</string>
    <string name="routes">Routes</string>
    <string name="shop">Shop</string>
    <string name="account_manage">Account management</string>
    <string name="settings">Settings</string>
    <string name="bug_report">Report a bug</string>
    <string name="pen">Pen</string>
    <string name="star">Star</string>
    <string name="account">Account</string>
    <string name="bug">Bug</string>
    <string name="something_wrong">Oops! Something Wrong</string>
    <string name="search">Search</string>

    <string name="user_name">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="enter">Enter</string>
    <string name="nickname">Nickname</string>
    <string name="sign_in">Sign in</string>
    <string name="warning">Warning</string>
    <string name="no_sign_in_continue">If you continue without an account, many features of the application will be unavailable</string>
    <string name="no_provide">The author doesn\'t ensure the security of your data! Please enter unreal email and password!</string>
    <string name="scontinue">Continue</string>
    <string name="cancel">Cancel</string>

    <string name="place">Place</string>
    <string name="event">Event</string>
    <string name="text">Text</string>
    <string name="add_place">Add place</string>
    <string name="position">Position</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="data">Data</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="nothing_found">Nothing found</string>

    <string name="add_event">Add event</string>
    <string name="meters">meters</string>
    <string name="kilometers">kilometers</string>

    <string-array name="add_event_hints">
        <item>Select the exact location</item>
        <item>Move your finger to change the size of the event</item>
        <item>Fill in the information about adding an item</item>
    </string-array>

    <string name="add_photo">Add Photo</string>
    <string name="press_to_take_photo">Press to take photo</string>
    <string name="name_of_place">Name of thing</string>
    <string name="place_added">Place added!</string>
    <string name="place_adding_error">Place not added!</string>
    <string name="description">Description</string>
    <string name="tags">Tags (#fun #super… etc)</string>
    <string name="need_from_to_symbols">%name% length must been from %from% to %to% characters!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="wrong_email">Wrong Email!</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="sql_error">SQL ERROR</string>
    <string name="already_registered">That email already registered</string>
    <string name="unknown_error">ERROR %num%</string>
    <string name="server_not_online">Can not connect to the server</string>

    <string name="send_report">Send report</string>
    <string name="title_of_problem">Title of problem</string>
    <string name="tell_us_bug">Please, tell us about your bug!</string>
    <string name="thank_for_feedback">Thank you for feedback!</string>
    <string name="its_very_important_for_us">It is very important for us</string>
    <string name="error_occurred">Server error occurred! Maybe I can\'t\ make normal apps!</string>

    <string-array name="add_place_hints">
        <item>Choose accurate location</item>
        <item>Choose type of adding item</item>
        <item>Fill in the information about adding an item</item>
    </string-array>


    <string name="no_internet_connection">Sorry, no Internet connection!</string>
    <string name="wait">Wait</string>
    <string name="success">Success</string>
    <string name="no_connection">No connection</string>
    <string name="can_not_get_position">We can\'t\ get your position</string>

    <string name="title_activity_internet_connection">InternetConnection</string>
    <string name="email">Email</string>

    <string-array name="types_places">
        <item>Graffiti</item>
        <item>Monument</item>
        <item>Place of shooting</item>
        <item>Mountain</item>
        <item>Сhurch</item>
        <item>Epic building</item>
        <item>Easter egg</item>
    </string-array>

    <string name="show_hints">Show hints</string>
    <string name="default_is_on">Default is on</string>

    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_email">New email</string>
    <string name="log_out">Log out</string>
    <string name="important">Important!</string>
    <string name="do_you_want_to_log_out">Do you really want to leave from your current account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat password</string>
    <string name="passwords_different">Passwords are different!</string>
    <string name="move_finger_to_continue">Move finger to continue</string>
    <string name="welcome">Welcome!</string>
    <string name="tap" translatable="false">tap</string>
    <string name="find_interesting_places">Find interesting places!</string>
    <string name="be_a_part_of_event">Be a part of event!</string>
    <string name="have_a_friend">Have a friend!</string>
    <string name="or">or</string>
    <string name="continue_with_account">Continue</string>
    <string name="try_it">Try it</string>
    <string name="i_hope_you_remember_your_password">I hope you remember your password!</string>
    <string name="send_a_comment">Send a comment</string>
    <string name="send">Send</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="beginning">Beginning</string>
    <string name="ending">Ending</string>
    <string name="check_dates">Please, check your dates!</string>
    <string name="min_event_duration">Minimum event duration is %d minutes</string>
    <string name="events_cant_be_started_before_current_date">Event\'s starting date can\'t be before current</string>
    <string name="event_added">Event added!</string>
    <string name="event_adding_error">Event not added!</string>

    <string name="event_finished">The event has been finished</string>
    <string name="join">Join</string>
    <string name="share_via">Share via</string>
    <string name="download_app">Download: \'link\' to see this and more different places!</string>
    <string name="interesting_place">Interesting place:</string>

    <string name="you_already_choosen_this">You have choosen this already!</string>
    <string name="press_to_start">Press here to start the route</string>
    <string name="active_route">Active route</string>
    <string name="wow">Wow!</string>
    <string name="you_reach_goal">You are reach the goal on the current route!</string>
    <string name="finish_route">You are have been finished route! Сongratulation!</string>

</resources>
