<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="304dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/finds_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/star"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            style="@style/Text.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center"
            android:text="@string/my_finds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shop_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/shop"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_shopping" />

        <TextView
            style="@style/Text.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/shop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_manage_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/account"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_account" />

        <TextView
            style="@style/Text.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/account_manage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/settings"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            style="@style/Text.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bug_report_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/bug"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_bug" />

        <TextView
            style="@style/Text.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/bug_report" />

    </LinearLayout>

</LinearLayout>