<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".AuthorizationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="21dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/Text.LightTitle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_stick"
            android:tint="@color/greyE0" />

    </LinearLayout>

    <include layout="@layout/logpas_field" />

    <Button
        android:id="@+id/enterButton"
        style="@style/Button.Raised"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter" />

    <Button
        android:id="@+id/registerButton"
        style="@style/Button.Flat"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/register" />


</LinearLayout>