<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="98dp"
    android:elevation="4dp"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/profileImageLayout"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditLayout"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/infoEditLayout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/press_to_edit"
                android:textColor="@color/white"
                android:textSize="9sp" />

            <ImageView
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/pen"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_pencil" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>