<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDataLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".additions.DataFragment">

    <FrameLayout
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#BDBDBD"
        android:elevation="6dp">

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="#60000000"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                style="@style/Text.CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/add_photo" />

            <TextView
                style="@style/Text.CardSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/press_to_take_photo" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <LinearLayout
                android:id="@+id/nameTextLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameText"
                    style="@style/Text.NameTitle.Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_place"
                    android:textAllCaps="true" />

                <ImageView
                    android:id="@+id/nameEditButton"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_pencil"
                    android:tint="@color/DarkGrey" />
            </LinearLayout>

            <EditText
                android:id="@+id/nameTextEdit"
                style="@style/Text.NameTitle.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="bottom"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />


        </ViewSwitcher>

    </LinearLayout>

    <EditText
        android:id="@+id/descriptionInput"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:hint="@string/description"
        android:imeOptions="actionNone"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/charsCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="end"
        android:textColor="#9A9A9A"
        android:textSize="12sp" />


</LinearLayout>