<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pastPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/current_password"
        app:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/pastPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/pastPasswordInfo"
        style="@style/Text.InputWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/new_password"
        app:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/newPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/newPasswordInfo"
        style="@style/Text.InputWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/repeat_new_password"
        app:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/newPasswordRepEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/darkGrey" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/newPasswordRepInfo"
        style="@style/Text.InputWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center" />
</LinearLayout>