<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/chooseTimeLayout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/beginning"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/selectBeginningDateLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/button_border">

                <TextView
                    android:id="@+id/selectBeginningDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/select_date"
                    android:textColor="@color/darkGrey"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/selectBeginningTimeLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_border">

                <TextView
                    android:id="@+id/selectBeginningTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/select_time"
                    android:textColor="@color/darkGrey"
                    android:textSize="16sp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ending"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/selectEndingDateLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/button_border">

                <TextView
                    android:id="@+id/selectEndingDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/select_date"
                    android:textColor="@color/darkGrey"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/selectEndingTimeLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_border">

                <TextView
                    android:id="@+id/selectEndingTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/select_time"
                    android:textColor="@color/darkGrey"
                    android:textSize="16sp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>